Implemented changes for cross compatability

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -7,5 +7,5 @@ services:
     ports:
       - "5000:5000"
     volumes:
-      - ./UserModels:/app/shared
+      - ./userModels:/app/shared
     restart: unless-stopped
