--- a/frontend/package.json
+++ b/frontend/package.json
@@ -9,30 +9,30 @@
     "lint": "next lint"
   },
   "dependencies": {
-    "next": "14.1.0",
-    "react": "^18",
-    "react-dom": "^18",
-    "three": "^0.162.0",
-    "react-three-fiber": "^6.0.13",
     "@react-three/drei": "^9.99.0",
     "@react-three/fiber": "^8.15.16",
-    "react-dropzone": "^14.2.3",
     "axios": "^1.6.7",
-    "react-colorful": "^5.6.1",
-    "react-icons": "^5.0.1",
     "clsx": "^2.1.0",
-    "tailwind-merge": "^2.2.1"
+    "next": "^14.2.26",
+    "react": "^18",
+    "react-colorful": "^5.6.1",
+    "react-dom": "^18",
+    "react-dropzone": "^14.2.3",
+    "react-icons": "^5.0.1",
+    "react-three-fiber": "^6.0.13",
+    "tailwind-merge": "^2.2.1",
+    "three": "^0.162.0"
   },
   "devDependencies": {
     "@types/node": "^20",
     "@types/react": "^18",
     "@types/react-dom": "^18",
     "@types/three": "^0.162.0",
-    "autoprefixer": "^10.0.1",
+    "autoprefixer": "^10.4.21",
     "eslint": "^8",
     "eslint-config-next": "14.1.0",
-    "postcss": "^8",
-    "tailwindcss": "^3.3.0",
+    "postcss": "^8.5.3",
+    "tailwindcss": "^3.4.17",
     "typescript": "^5"
   }
 }
