--- a/frontend/package.json
+++ b/frontend/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "my-v0-project",
+  "name": "3dInstant",
   "version": "0.1.0",
   "private": true,
   "scripts": {
@@ -41,11 +41,11 @@
     "@react-three/drei": "latest",
     "@react-three/fiber": "latest",
     "@types/three": "^0.174.0",
-    "autoprefixer": "^10.4.20",
+    "autoprefixer": "^10.4.21",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
     "cmdk": "1.0.4",
-    "date-fns": "4.1.0",
+    "date-fns": "^3.0.0",
     "embla-carousel-react": "8.5.1",
     "expo": "latest",
     "expo-asset": "latest",
@@ -57,7 +57,7 @@
     "next": "15.1.0",
     "next-themes": "^0.4.4",
     "react": "^19",
-    "react-day-picker": "8.10.1",
+    "react-day-picker": "latest",
     "react-dom": "^19",
     "react-hook-form": "^7.54.1",
     "react-native": "latest",
@@ -67,14 +67,14 @@
     "tailwind-merge": "^2.5.5",
     "tailwindcss-animate": "^1.0.7",
     "three": "latest",
-    "vaul": "^0.9.6",
+    "vaul": "latest",
     "zod": "^3.24.1"
   },
   "devDependencies": {
     "@types/node": "^22.13.14",
     "@types/react": "^19",
     "@types/react-dom": "^19",
-    "postcss": "^8",
+    "postcss": "^8.5.3",
     "tailwindcss": "^3.4.17",
     "typescript": "^5"
   }
